<resources>
    <string name="app_name">Chugger</string>
    <string name="startBtnString">Start</string>
    <string name="getStartedBtnString">Ready</string>
    <string name="connectToastString">"Connected to %1$s"</string>
    <string name="degreesTextString">%1$d degrees</string>
    <string name="connectingToastString">Connecting to %1$s…</string>
    <string name="dbTag" translatable="false">db</string>
    <string name="chromeErrorString">Error while opening Chrome</string>
    <string name="chromeUrlString" translatable="false">googlechrome://navigate?url=https://www.espruino.com/ide/</string>
    <string name="locationString">Location is needed to use this app</string>
    <string name="permissionNeededString">Permission needed</string>
    <string name="turnOnString">Turn on</string>
    <string name="drinkTimeString">Your time was %1s seconds. Would you like to save it?</string>
    <string name="newTimeString">New time</string>
    <string name="saveTimeString">Save</string>
    <string name="closeAlertString">Close</string>
    <string name="nfcPermissionString">NFC is needed to use this feature</string>
    <string name="nfcUnableString">Unable to use NFC</string>
    <string name="okString" translatable="false">OK</string>
    <string name="savedString">Saved</string>
    <string name="nfcTagString">Scan your tag to receive board data</string>
    <string name="nfcBatteryString" translatable="false">%1$s V</string>
    <string name="nfcTempString" translatable="false">%1$s °C</string>
    <string name="nfcPressureString" translatable="false">%1$s hPa</string>
    <string name="nfcHumidString" translatable="false">%1$s %</string>
    <string name="username">Username</string>
    <string name="time">Time</string>
    <string name="_00" translatable="false">00:</string>
    <string name="_0" translatable="false">0</string>
    <string name="addUserTimeString">Add your time</string>
    <string name="add">Add</string>
    <string name="battery">Battery</string>
    <string name="blankDashString" translatable="false">--</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="scores" translatable="false">Scores</string>
    <string name="nfc" translatable="false">NFC</string>
    <string name="web" translatable="false">Web</string>
    <string name="intro_text">Press the Scan button to find your Ruuvi tag.</string>
    <string name="new_scan_text">Not your Ruuvi tag? Try to scan again.</string>
    <string name="rssiOffSetHigh" translatable="false">-86</string>
    <string name="rssiOffSetLow" translatable="false">-70</string>
    <string name="macKey" translatable="false">RuuviMac</string>
    <string name="pairToastText">Paired device %1$s</string>
    <string name="pairExceptionText">Problem occurred while pairing</string>
    <string name="cityText">Not available</string>
    <string name="city" translatable="false">City</string>

    <string name="titleData0">What is this?</string>
    <string name="titleData1">Flashing the correct firmware</string>
    <string name="titleData2">Connecting to Web Bluetooth</string>
    <string name="titleData3">Drinking instructions</string>

    <string name="descData0">
        Chugger is the perfect app to host a chugging competition with friends and family.
        Use it to save your drinking time, location and see who is the fastest Chugger. You can use any
        beverage you like but we recommend using beer. Developed by Niko Holopainen &amp; Jalmari Espo.
    </string>
    <string name="descData1">
        The application is designed to use RuuviTag with the Espruino v1.93 firmware.
        For the firmware instructions, please refer to the official Ruuvi documentation at
        lab.ruuvi.com/dfu or check out the instructions from GitHub/Nikojoel/Chugger.
    </string>
    <string name="descData2">
        To install the correct JavaScript code, press the wrench icon
        found on the toolbar to open up the Espruino Web IDE. Code can be found from GitHub/Nikojoel/Chugger.
        Insert the code to the IDE and send it to Espruino by pressing the RAM button.
        Remember to disconnect the Ruuvi from the IDE after the code is sent.
    </string>
    <string name="descData3">
        Before you start drinking, place the RuuviTag on bottom of a cooler sleeve
        and place your can on top of it. Make sure the tag notch is facing towards you. Press the start button only once
        and wait until you see a text that tells you the sensor is ready. Place the can back on a flat surface to stop
        the timer and get your time.
    </string>
    <string name="scanningText">Scanning…</string>
    <string name="scanBtnText">Scan</string>
    <string name="pairText">Pair</string>
    <string name="scoreTitle">Fastest Chuggers</string>
    <string name="noNameText" translatable="false">--</string>
    <string name="bleTag" translatable="false">ble</string>
    <string name="watchTag" translatable="false">watch</string>
</resources>