<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_db"
        android:orderInCategory="202"
        android:title="@string/scores"
        android:icon="@drawable/ic_people"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_nfc"
        android:orderInCategory="201"
        android:title="@string/nfc"
        android:icon="@drawable/ic_nfc"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_web"
        android:orderInCategory="200"
        android:title="@string/web"
        android:icon="@drawable/ic_ide"
        app:showAsAction="ifRoom"/>
</menu>