<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/userName"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/userTime"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="24sp" />
</LinearLayout>