<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beerbackground">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/battery"
                android:textColor="@color/nfcText"
                android:textSize="25sp"
                android:fontFamily="monospace"
                app:drawableStartCompat="@drawable/ic_battery" />

            <TextView
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/blankDashString"
                android:textSize="25sp"
                android:fontFamily="monospace"
                android:textColor="@color/nfcText" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/temperature"
            android:textColor="@color/nfcText"
            android:textSize="25sp"
            android:fontFamily="monospace"
            app:drawableStartCompat="@drawable/ic_temperature" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/blankDashString"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textColor="@color/nfcText" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/humidity"
            android:textColor="@color/nfcText"
            android:textSize="25sp"
            android:fontFamily="monospace"
            app:drawableStartCompat="@drawable/ic_humidity" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/blankDashString"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textColor="@color/nfcText" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/atmospheric_pressure"
            android:textColor="@color/nfcText"
            android:textSize="25sp"
            android:fontFamily="monospace"
            app:drawableStartCompat="@drawable/ic_pressure" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/blankDashString"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textColor="@color/nfcText" />


    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

